refactor: #29 CodeRabbit 리뷰 반영 - 입력값 검증 및 N+1 쿼리 개선